sandc/test/fixtures/astRegression/shouldFail/productions/ifTypeGuardPseudex/ElseBlockStatement.sand
pub class ElseBlockStatement {
    foo() {
        let a = if let b = c {
            c
        } else if cond {
            c
        } else {
            foo();
        };
    }
}